# PyMath

./: .gitignore  LICENSE  pyproject.toml  setup
.github/workflows/: ci.yml
pymath/: __init__.py  arithmetic.py
test/: test_arithmetic.py
